Refactoring of sequence data in-VM storage mechanism completed
svn path=/trunk/; revision=5102


Former-commit-id: 17a7a852976c4b25e4de3626bd86c395b0db6939